chore: fix footer copyright and formatting

--- a/src/content/blogs/blog-1.mdx
+++ b/src/content/blogs/blog-1.mdx
@@ -15,17 +15,24 @@ import ThreeImages from "../../utils/ThreeImages.astro";
 It was a typical Monday morning when Dr. Jennifer Martinez, LMFT, looked at her schedule and saw three empty slots marked "No Show" from the previous Friday. As she calculated the lost revenue - again - she realized this wasn't just an inconvenience. It was threatening the sustainability of her growing practice.
 
 <Bold>The Real Cost of Empty Chairs</Bold>
-Like many therapists, Dr. Martinez had always accepted no-shows as part of running a mental health practice. But when she actually ran the numbers, the reality was shocking. With an average of 12 no-shows per month at $150 per session, she was losing $1,800 monthly - or $21,600 annually. And that was just the direct revenue loss.
+Like many therapists, Dr. Martinez had always accepted no-shows as part of
+running a mental health practice. But when she actually ran the numbers, the
+reality was shocking. With an average of 12 no-shows per month at $150 per
+session, she was losing $1,800 monthly - or $21,600 annually. And that was just
+the direct revenue loss.
 
 <Bold>The Hidden Costs Nobody Talks About</Bold>
-Beyond the obvious financial impact, no-shows create a ripple effect:
-- Therapists spend unpaid time following up with clients
-- Wait-listed patients miss opportunities for care
-- The therapeutic relationship can suffer from inconsistent attendance
-- Administrative staff waste hours on manual rescheduling
+Beyond the obvious financial impact, no-shows create a ripple effect: -
+Therapists spend unpaid time following up with clients - Wait-listed patients
+miss opportunities for care - The therapeutic relationship can suffer from
+inconsistent attendance - Administrative staff waste hours on manual
+rescheduling
 
 <Bold>The Simple Solution That Changed Everything</Bold>
-After implementing an automated reminder system, Dr. Martinez saw immediate results. The system sent personalized text reminders 48 hours and 2 hours before each appointment, with easy options to confirm or reschedule. Clients could respond with a simple "YES" to confirm or click a link to reschedule.
+After implementing an automated reminder system, Dr. Martinez saw immediate
+results. The system sent personalized text reminders 48 hours and 2 hours before
+each appointment, with easy options to confirm or reschedule. Clients could
+respond with a simple "YES" to confirm or click a link to reschedule.
 
 <ThreeImages
   img1={"/assets/img/th-1/blog-inner-img-1.jpg"}
@@ -34,11 +41,9 @@ After implementing an automated reminder system, Dr. Martinez saw immediate resu
 />
 
 <Bold>The Numbers Don't Lie</Bold>
-Within 90 days of implementing automated reminders:
-- No-show rate dropped from 12% to 3%
-- Monthly revenue increased by $3,150
-- Administrative time saved: 10 hours per week
-- Client satisfaction scores improved by 22%
+Within 90 days of implementing automated reminders: - No-show rate dropped from
+12% to 3% - Monthly revenue increased by $3,150 - Administrative time saved: 10
+hours per week - Client satisfaction scores improved by 22%
 
 <Bold>Best Practices for Reminder Systems</Bold>
 Not all reminder systems are created equal. Here's what worked for Dr. Martinez:
@@ -49,13 +54,24 @@ Not all reminder systems are created equal. Here's what worked for Dr. Martinez:
 4. **Personalization**: Using preferred names and communication methods increases response rates
 
 <Bold>Beyond the Technology</Bold>
-While the automated system handles the heavy lifting, Dr. Martinez discovered that pairing technology with clear policies maximized results. She implemented a 24-hour cancellation policy and clearly communicated it during intake. The combination of proactive reminders and clear expectations created a culture of mutual respect.
+While the automated system handles the heavy lifting, Dr. Martinez discovered
+that pairing technology with clear policies maximized results. She implemented a
+24-hour cancellation policy and clearly communicated it during intake. The
+combination of proactive reminders and clear expectations created a culture of
+mutual respect.
 
 <Bold>ROI That Speaks for Itself</Bold>
-The $99 monthly investment in automation software paid for itself in the first three days. Over the course of a year, the practice saved over $50,000 in recovered revenue and reduced administrative costs. But perhaps more importantly, Dr. Martinez could focus on what she does best - helping clients heal.
+The $99 monthly investment in automation software paid for itself in the first
+three days. Over the course of a year, the practice saved over $50,000 in
+recovered revenue and reduced administrative costs. But perhaps more
+importantly, Dr. Martinez could focus on what she does best - helping clients
+heal.
 
 <Bold>Taking Action in Your Practice</Bold>
-If you're still manually calling clients or accepting high no-show rates as "normal," it's time to reconsider. Modern automation tools designed specifically for mental health practices can transform your operations while maintaining the personal touch your clients expect.
+If you're still manually calling clients or accepting high no-show rates as
+"normal," it's time to reconsider. Modern automation tools designed specifically
+for mental health practices can transform your operations while maintaining the
+personal touch your clients expect.
 
 The best part? Most clients actually prefer automated reminders. In exit surveys, 94% of Dr. Martinez's clients said the reminder system made them feel cared for and helped them prioritize their mental health.
 
