--- a/src/content/blogs/blog-2.mdx
+++ b/src/content/blogs/blog-2.mdx
@@ -15,23 +15,24 @@ import ThreeImages from "../../utils/ThreeImages.astro";
 Last month, a therapist called us in a panic. She'd shared a heartwarming success story on her practice's Facebook page - with permission, she thought - only to realize she'd inadvertently violated HIPAA. The post was deleted, but the damage to her professional reputation lingered. This scenario plays out more often than you'd think, and it's completely preventable.
 
 <Bold>The HIPAA Marketing Minefield</Bold>
-Marketing feels tricky for mental health professionals. You want to show your expertise and connect with potential clients, but you're bound by strict privacy laws and ethical standards. The good news? You can build a thriving online presence while staying completely compliant. You just need to know the rules.
+Marketing feels tricky for mental health professionals. You want to show your
+expertise and connect with potential clients, but you're bound by strict privacy
+laws and ethical standards. The good news? You can build a thriving online
+presence while staying completely compliant. You just need to know the rules.
 
 <Bold>What You CAN Share Online</Bold>
-Let's start with the green zone - content that's always safe to share:
-- Educational content about mental health conditions and treatments
-- Your professional qualifications and therapeutic approach
-- General practice information (hours, location, services offered)
-- Mental health tips and coping strategies
-- Your professional story and why you became a therapist
+Let's start with the green zone - content that's always safe to share: -
+Educational content about mental health conditions and treatments - Your
+professional qualifications and therapeutic approach - General practice
+information (hours, location, services offered) - Mental health tips and coping
+strategies - Your professional story and why you became a therapist
 
 <Bold>The Danger Zones to Avoid</Bold>
-Here's where therapists often stumble without realizing it:
-- Any information that could identify a patient (even if you think it's anonymous)
-- Photos or videos from your office that might show patients
-- Specific treatment outcomes tied to identifiable situations
-- Screenshots of patient communications (even "anonymous" ones)
-- Testimonials without proper written authorization
+Here's where therapists often stumble without realizing it: - Any information
+that could identify a patient (even if you think it's anonymous) - Photos or
+videos from your office that might show patients - Specific treatment outcomes
+tied to identifiable situations - Screenshots of patient communications (even
+"anonymous" ones) - Testimonials without proper written authorization
 
 <ThreeImages
   img1={"/assets/img/th-1/blog-inner-img-1.jpg"}
@@ -48,43 +49,36 @@ Success stories are powerful marketing tools, but they require careful handling:
 4. **Focus on the journey**: Emphasize the therapeutic process rather than specific client details
 
 <Bold>Social Media Best Practices</Bold>
-Your social media presence can attract clients while maintaining professionalism:
-- Never friend or follow current clients on personal accounts
-- Use separate professional accounts for your practice
-- Respond to comments publicly with general information only
-- Move specific inquiries to private, secure channels
-- Review your privacy settings regularly
+Your social media presence can attract clients while maintaining
+professionalism: - Never friend or follow current clients on personal accounts -
+Use separate professional accounts for your practice - Respond to comments
+publicly with general information only - Move specific inquiries to private,
+secure channels - Review your privacy settings regularly
 
 <Bold>Website Compliance Essentials</Bold>
-Your website needs more than just good content. Ensure you have:
-- A comprehensive privacy policy
-- Clear disclaimers about online communication limits
-- Secure contact forms (not just email links)
-- HTTPS encryption on all pages
-- No tracking pixels that compromise visitor privacy
+Your website needs more than just good content. Ensure you have: - A
+comprehensive privacy policy - Clear disclaimers about online communication
+limits - Secure contact forms (not just email links) - HTTPS encryption on all
+pages - No tracking pixels that compromise visitor privacy
 
 <Bold>The Ethics of Online Reviews</Bold>
-Reviews are complicated in mental health. Here's how to handle them:
-- Never respond with any client-specific information
-- Don't solicit reviews from current clients (it's an ethical violation)
-- If you receive a negative review, consult with a lawyer before responding
-- Consider having a policy about not reading reviews to protect therapeutic relationships
+Reviews are complicated in mental health. Here's how to handle them: - Never
+respond with any client-specific information - Don't solicit reviews from
+current clients (it's an ethical violation) - If you receive a negative review,
+consult with a lawyer before responding - Consider having a policy about not
+reading reviews to protect therapeutic relationships
 
 <Bold>Email Marketing Done Right</Bold>
-Email can be effective if handled properly:
-- Use HIPAA-compliant email services
-- Never include patient information in newsletters
-- Separate your marketing list from your patient communications
-- Include clear unsubscribe options
-- Focus on educational content, not individual cases
+Email can be effective if handled properly: - Use HIPAA-compliant email services
+- Never include patient information in newsletters - Separate your marketing
+list from your patient communications - Include clear unsubscribe options -
+Focus on educational content, not individual cases
 
 <Bold>Your Compliance Checklist</Bold>
-Before posting any content, ask yourself:
-- Could someone identify a patient from this?
-- Am I sharing professional insights or patient details?
-- Have I removed all identifying information?
-- Would I be comfortable if my licensing board saw this?
-- Does this maintain professional boundaries?
+Before posting any content, ask yourself: - Could someone identify a patient
+from this? - Am I sharing professional insights or patient details? - Have I
+removed all identifying information? - Would I be comfortable if my licensing
+board saw this? - Does this maintain professional boundaries?
 
 <Bold>Marketing That Builds Trust</Bold>
 
