--- a/src/content/blogs/blog-3.mdx
+++ b/src/content/blogs/blog-3.mdx
@@ -15,18 +15,22 @@ import ThreeImages from "../../utils/ThreeImages.astro";
 "I became a therapist to help people heal, not to become a salesperson." Dr. Sarah Chen's words echoed what we hear from mental health professionals every day. After years of building her trauma-informed practice, she had a three-month waitlist but was barely breaking even. Something had to change, but she refused to compromise her values for growth.
 
 <Bold>The Ethical Dilemma of Practice Growth</Bold>
-Dr. Sarah's concerns were valid. She'd seen colleagues use manipulative marketing tactics, make unrealistic promises, and prioritize profit over patient care. But she also recognized a painful truth: her waitlist meant people in crisis couldn't access help. Growing her practice wasn't about greed - it was about serving more people who desperately needed trauma-informed care.
+Dr. Sarah's concerns were valid. She'd seen colleagues use manipulative
+marketing tactics, make unrealistic promises, and prioritize profit over patient
+care. But she also recognized a painful truth: her waitlist meant people in
+crisis couldn't access help. Growing her practice wasn't about greed - it was
+about serving more people who desperately needed trauma-informed care.
 
 <Bold>Starting With Values, Not Tactics</Bold>
-Instead of jumping into marketing tactics, we started by clarifying Dr. Sarah's core values:
-- Trauma-informed care accessible to diverse populations
-- Transparent, honest communication about the therapeutic process
-- Maintaining appropriate boundaries while being approachable
-- Creating a safe, inclusive space for all clients
-- Sustainable practice that prevents therapist burnout
+Instead of jumping into marketing tactics, we started by clarifying Dr. Sarah's
+core values: - Trauma-informed care accessible to diverse populations -
+Transparent, honest communication about the therapeutic process - Maintaining
+appropriate boundaries while being approachable - Creating a safe, inclusive
+space for all clients - Sustainable practice that prevents therapist burnout
 
 <Bold>The Strategic Foundation</Bold>
-With values as our north star, we developed a growth strategy that felt authentic:
+With values as our north star, we developed a growth strategy that felt
+authentic:
 
 1. **Educational content over sales pitches**: Blog posts about understanding trauma responses
 2. **Community building over cold marketing**: Free monthly workshops on coping skills
@@ -40,43 +44,40 @@ With values as our north star, we developed a growth strategy that felt authenti
 />
 
 <Bold>The Website Transformation</Bold>
-Dr. Sarah's old website was a digital business card - contact info and credentials. The new site became a resource hub:
-- Trauma education articles that normalized seeking help
-- Clear explanation of her therapeutic modalities (EMDR, somatic experiencing)
-- Photos and videos that showed a warm, safe environment
-- Easy booking system with clear policies
-- Resources for those not ready for therapy
+Dr. Sarah's old website was a digital business card - contact info and
+credentials. The new site became a resource hub: - Trauma education articles
+that normalized seeking help - Clear explanation of her therapeutic modalities
+(EMDR, somatic experiencing) - Photos and videos that showed a warm, safe
+environment - Easy booking system with clear policies - Resources for those not
+ready for therapy
 
 <Bold>Community Engagement That Matters</Bold>
-Instead of traditional advertising, Dr. Sarah invested in community presence:
-- Monthly free workshops at the local library on trauma and resilience
-- Collaboration with primary care doctors for referrals
-- Guest articles in local publications about mental health
-- Partnerships with community organizations serving trauma survivors
+Instead of traditional advertising, Dr. Sarah invested in community presence: -
+Monthly free workshops at the local library on trauma and resilience -
+Collaboration with primary care doctors for referrals - Guest articles in local
+publications about mental health - Partnerships with community organizations
+serving trauma survivors
 
 <Bold>The Power of Authentic Storytelling</Bold>
-With proper consent, Dr. Sarah began sharing composite success stories that demonstrated:
-- The courage it takes to begin trauma therapy
-- Realistic expectations about the healing journey
-- How trauma-informed care differs from traditional therapy
-- Why specialized trauma training matters
+With proper consent, Dr. Sarah began sharing composite success stories that
+demonstrated: - The courage it takes to begin trauma therapy - Realistic
+expectations about the healing journey - How trauma-informed care differs from
+traditional therapy - Why specialized trauma training matters
 
 These stories resonated deeply with potential clients who saw their own struggles reflected.
 
 <Bold>Sustainable Growth Systems</Bold>
-To handle growth without burnout, we implemented:
-- Automated scheduling that reduced administrative time by 75%
-- Clear intake process that matched clients with the right level of care
-- Group therapy programs for appropriate clients
-- Supervised associates to expand capacity while maintaining quality
+To handle growth without burnout, we implemented: - Automated scheduling that
+reduced administrative time by 75% - Clear intake process that matched clients
+with the right level of care - Group therapy programs for appropriate clients -
+Supervised associates to expand capacity while maintaining quality
 
 <Bold>The Results After One Year</Bold>
-The transformation exceeded expectations:
-- Waitlist eliminated through strategic capacity building
-- Revenue increased 250% while maintaining sliding scale spots
-- Added two trauma-trained associates to the practice
-- 40% of new clients cited educational content as deciding factor
-- Client retention improved by 30%
+The transformation exceeded expectations: - Waitlist eliminated through
+strategic capacity building - Revenue increased 250% while maintaining sliding
+scale spots - Added two trauma-trained associates to the practice - 40% of new
+clients cited educational content as deciding factor - Client retention improved
+by 30%
 
 <Bold>Lessons for Values-Driven Growth</Bold>
 Dr. Sarah's journey taught us crucial lessons:
