--- a/src/content/career/career-1.mdx
+++ b/src/content/career/career-1.mdx
@@ -13,21 +13,32 @@ You'll be the primary point of contact for 15-20 mental health practices, guidin
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    Manage client relationships from onboarding through ongoing success, serving as their strategic partner
-  </li>
-  <li>Coordinate service delivery across marketing, operations, and accreditation teams</li>
-  <li>
-    Conduct monthly strategy sessions with practice owners to review performance and adjust tactics
-  </li>
-  <li>Monitor client KPIs including patient acquisition, retention, and operational efficiency</li>
-  <li>
-    Identify upsell opportunities when practices are ready for additional services or higher tiers
+    Manage client relationships from onboarding through ongoing success, serving
+    as their strategic partner
   </li>
   <li>
-    Ensure all client deliverables meet HIPAA compliance and ethical marketing standards
+    Coordinate service delivery across marketing, operations, and accreditation
+    teams
   </li>
   <li>
-    Advocate for client needs internally and translate technical solutions into clear recommendations
+    Conduct monthly strategy sessions with practice owners to review performance
+    and adjust tactics
+  </li>
+  <li>
+    Monitor client KPIs including patient acquisition, retention, and
+    operational efficiency
+  </li>
+  <li>
+    Identify upsell opportunities when practices are ready for additional
+    services or higher tiers
+  </li>
+  <li>
+    Ensure all client deliverables meet HIPAA compliance and ethical marketing
+    standards
+  </li>
+  <li>
+    Advocate for client needs internally and translate technical solutions into
+    clear recommendations
   </li>
 </ul>
 
@@ -37,35 +48,47 @@ We're looking for someone who understands both business operations and the uniqu
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    3+ years of account management, client success, or project management experience
+    3+ years of account management, client success, or project management
+    experience
   </li>
-  <li>Exceptional communication skills - you can explain complex topics simply and with empathy</li>
   <li>
-    Strong project management abilities with experience coordinating multiple stakeholders
+    Exceptional communication skills - you can explain complex topics simply and
+    with empathy
   </li>
-  <li>Data-driven mindset with ability to analyze metrics and translate into actionable insights</li>
+  <li>
+    Strong project management abilities with experience coordinating multiple
+    stakeholders
+  </li>
+  <li>
+    Data-driven mindset with ability to analyze metrics and translate into
+    actionable insights
+  </li>
   <li>
     Understanding of digital marketing fundamentals (SEO, PPC, social media)
   </li>
   <li>
-    Bonus: Experience with healthcare, mental health, or other regulated industries
+    Bonus: Experience with healthcare, mental health, or other regulated
+    industries
   </li>
   <li>
-    Bonus: Knowledge of HIPAA compliance, healthcare accreditation, or practice management systems
+    Bonus: Knowledge of HIPAA compliance, healthcare accreditation, or practice
+    management systems
   </li>
 </ul>
 
 ##### Skills & Experience
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
-  <li>
-    Proficiency with project management tools (Asana, Monday, or similar)
-  </li>
+  <li>Proficiency with project management tools (Asana, Monday, or similar)</li>
   <li>Experience with CRM systems and client reporting dashboards</li>
   <li>
-    Strong analytical skills with ability to interpret marketing and operational metrics
+    Strong analytical skills with ability to interpret marketing and operational
+    metrics
   </li>
-  <li>Excellent time management - you'll juggle multiple clients with varying needs</li>
+  <li>
+    Excellent time management - you'll juggle multiple clients with varying
+    needs
+  </li>
   <li>
     Remote work experience with proven ability to build relationships virtually
   </li>
