--- a/src/content/career/career-2.mdx
+++ b/src/content/career/career-2.mdx
@@ -13,18 +13,27 @@ You'll develop and execute social media strategies for 10-15 mental health pract
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    Create and schedule social media content across platforms (Facebook, Instagram, LinkedIn, TikTok)
-  </li>
-  <li>Develop content calendars aligned with mental health awareness dates and practice specialties</li>
-  <li>
-    Write compassionate, educational posts that reduce stigma and encourage help-seeking
-  </li>
-  <li>Monitor and respond to comments/messages while maintaining HIPAA compliance</li>
-  <li>
-    Analyze social media metrics and provide monthly performance reports to clients
+    Create and schedule social media content across platforms (Facebook,
+    Instagram, LinkedIn, TikTok)
   </li>
   <li>
-    Collaborate with therapists to transform clinical insights into accessible social content
+    Develop content calendars aligned with mental health awareness dates and
+    practice specialties
+  </li>
+  <li>
+    Write compassionate, educational posts that reduce stigma and encourage
+    help-seeking
+  </li>
+  <li>
+    Monitor and respond to comments/messages while maintaining HIPAA compliance
+  </li>
+  <li>
+    Analyze social media metrics and provide monthly performance reports to
+    clients
+  </li>
+  <li>
+    Collaborate with therapists to transform clinical insights into accessible
+    social content
   </li>
   <li>
     Stay current on platform updates and mental health marketing best practices
@@ -37,22 +46,28 @@ We need someone who understands both social media marketing and the unique sensi
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
   <li>
-    2+ years of social media marketing experience, preferably in healthcare or wellness
+    2+ years of social media marketing experience, preferably in healthcare or
+    wellness
   </li>
-  <li>Exceptional writing skills with ability to adapt tone for different audiences</li>
+  <li>
+    Exceptional writing skills with ability to adapt tone for different
+    audiences
+  </li>
   <li>
     Understanding of HIPAA and ethical considerations in healthcare marketing
   </li>
-  <li>Experience with social media management tools (Hootsuite, Buffer, Sprout Social)</li>
   <li>
-    Strong visual eye - ability to create or direct creation of graphics using Canva or similar
+    Experience with social media management tools (Hootsuite, Buffer, Sprout
+    Social)
+  </li>
+  <li>
+    Strong visual eye - ability to create or direct creation of graphics using
+    Canva or similar
   </li>
   <li>
     Data-driven approach with experience in social media analytics and reporting
   </li>
-  <li>
-    Bonus: Personal or professional experience with mental health topics
-  </li>
+  <li>Bonus: Personal or professional experience with mental health topics</li>
 </ul>
 
 ##### Skills & Experience
@@ -61,12 +76,15 @@ We need someone who understands both social media marketing and the unique sensi
   <li>
     Proficiency with major social media platforms and their business tools
   </li>
-  <li>Experience with content creation tools (Canva, Adobe Creative Suite basics)</li>
+  <li>
+    Experience with content creation tools (Canva, Adobe Creative Suite basics)
+  </li>
   <li>
     Understanding of social media advertising and targeting for healthcare
   </li>
   <li>Knowledge of SEO principles as they apply to social media</li>
   <li>
-    Excellent time management - you'll manage multiple client accounts simultaneously
+    Excellent time management - you'll manage multiple client accounts
+    simultaneously
   </li>
 </ul>
