--- a/src/content/career/career-3.mdx
+++ b/src/content/career/career-3.mdx
@@ -15,19 +15,25 @@ You'll architect and build web applications that power the digital presence of m
   <li>
     Build responsive, accessible websites using React, Next.js, Gatsby, or Astro
   </li>
-  <li>Develop serverless APIs and functions using AWS Lambda, API Gateway, and DynamoDB</li>
   <li>
-    Implement secure patient intake forms and scheduling systems with proper encryption
+    Develop serverless APIs and functions using AWS Lambda, API Gateway, and
+    DynamoDB
+  </li>
+  <li>
+    Implement secure patient intake forms and scheduling systems with proper
+    encryption
   </li>
   <li>Optimize websites for Core Web Vitals and perfect Lighthouse scores</li>
   <li>
-    Integrate third-party APIs (payment processors, scheduling tools, telehealth platforms)
+    Integrate third-party APIs (payment processors, scheduling tools, telehealth
+    platforms)
   </li>
   <li>
     Set up CI/CD pipelines and infrastructure as code using AWS CDK or Terraform
   </li>
   <li>
-    Collaborate with designers to implement pixel-perfect, performant user interfaces
+    Collaborate with designers to implement pixel-perfect, performant user
+    interfaces
   </li>
 </ul>
 
@@ -36,37 +42,34 @@ You'll architect and build web applications that power the digital presence of m
 We need a versatile developer who can handle both frontend polish and backend complexity, with a security-first mindset essential for healthcare applications.
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
+  <li>3+ years of full-stack development experience with modern JavaScript</li>
   <li>
-    3+ years of full-stack development experience with modern JavaScript
+    Strong proficiency in React and at least one meta-framework (Next.js,
+    Gatsby, Remix)
   </li>
-  <li>Strong proficiency in React and at least one meta-framework (Next.js, Gatsby, Remix)</li>
   <li>
     Experience with AWS services (Lambda, S3, CloudFront, DynamoDB, Cognito)
   </li>
-  <li>Understanding of HIPAA compliance and security best practices for healthcare apps</li>
+  <li>
+    Understanding of HIPAA compliance and security best practices for healthcare
+    apps
+  </li>
   <li>
     Proven ability to learn new technologies quickly and apply them effectively
   </li>
+  <li>Experience with headless CMS platforms (Strapi, Sanity, Contentful)</li>
   <li>
-    Experience with headless CMS platforms (Strapi, Sanity, Contentful)
-  </li>
-  <li>
-    Bonus: Experience with healthcare APIs, FHIR standards, or telehealth platforms
+    Bonus: Experience with healthcare APIs, FHIR standards, or telehealth
+    platforms
   </li>
 </ul>
 
 ##### Skills & Experience
 
 <ul class="mb-10 flex list-inside list-disc flex-col gap-5 lg:mb-[60px]">
-  <li>
-    Expert-level JavaScript/TypeScript with modern ES6+ features
-  </li>
+  <li>Expert-level JavaScript/TypeScript with modern ES6+ features</li>
   <li>Proficiency with Git, GitHub Actions, and modern DevOps practices</li>
-  <li>
-    Experience with serverless architectures and event-driven systems
-  </li>
+  <li>Experience with serverless architectures and event-driven systems</li>
   <li>Strong understanding of web security, encryption, and data privacy</li>
-  <li>
-    Familiarity with infrastructure as code and AWS best practices
-  </li>
+  <li>Familiarity with infrastructure as code and AWS best practices</li>
 </ul>
