--- a/src/content/services/service-1.mdx
+++ b/src/content/services/service-1.mdx
@@ -22,13 +22,16 @@ We understand that mental health marketing requires a delicate touch. That's why
 
 <div class="font-semibold text-ColorBlack">
   <ServiceBadge>
-    Local SEO - Ensure patients find you when searching for "therapist near me" or "psychiatrist in [your city]"
+    Local SEO - Ensure patients find you when searching for "therapist near me"
+    or "psychiatrist in [your city]"
   </ServiceBadge>
   <ServiceBadge>
-    Google Ads & Social Media - Targeted campaigns that reach patients actively seeking mental health support
+    Google Ads & Social Media - Targeted campaigns that reach patients actively
+    seeking mental health support
   </ServiceBadge>
   <ServiceBadge>
-    Reputation Management - Build trust with positive reviews while maintaining patient confidentiality
+    Reputation Management - Build trust with positive reviews while maintaining
+    patient confidentiality
   </ServiceBadge>
 </div>
 
