--- a/src/content/services/service-2.mdx
+++ b/src/content/services/service-2.mdx
@@ -22,13 +22,16 @@ We specialize in implementing HIPAA-compliant solutions designed specifically fo
 
 <div class="font-semibold text-ColorBlack">
   <ServiceBadge>
-    Automated Scheduling - Online booking with smart scheduling rules and automated reminders to reduce no-shows
+    Automated Scheduling - Online booking with smart scheduling rules and
+    automated reminders to reduce no-shows
   </ServiceBadge>
   <ServiceBadge>
-    Digital Intake Forms - Secure, HIPAA-compliant forms patients complete before appointments
+    Digital Intake Forms - Secure, HIPAA-compliant forms patients complete
+    before appointments
   </ServiceBadge>
   <ServiceBadge>
-    Billing Optimization - Streamlined billing processes and insurance verification systems
+    Billing Optimization - Streamlined billing processes and insurance
+    verification systems
   </ServiceBadge>
 </div>
 
