--- a/src/content/services/service-3.mdx
+++ b/src/content/services/service-3.mdx
@@ -22,13 +22,16 @@ We understand the unique requirements for mental health practices. Our team has 
 
 <div class="font-semibold text-ColorBlack">
   <ServiceBadge>
-    Accreditation Preparation - Complete assessment, documentation, and process development for successful accreditation
+    Accreditation Preparation - Complete assessment, documentation, and process
+    development for successful accreditation
   </ServiceBadge>
   <ServiceBadge>
-    Policy Development - Create comprehensive policies and procedures that meet accreditation standards
+    Policy Development - Create comprehensive policies and procedures that meet
+    accreditation standards
   </ServiceBadge>
   <ServiceBadge>
-    Ongoing Compliance Support - Regular audits and updates to maintain your accredited status
+    Ongoing Compliance Support - Regular audits and updates to maintain your
+    accredited status
   </ServiceBadge>
 </div>
 
