--- a/src/content/services/service-4.mdx
+++ b/src/content/services/service-4.mdx
@@ -22,13 +22,16 @@ A great mental health website does more than look professional. It guides potent
 
 <div class="font-semibold text-ColorBlack">
   <ServiceBadge>
-    Therapist Profiles - Warm, professional profiles that help patients connect with the right provider
+    Therapist Profiles - Warm, professional profiles that help patients connect
+    with the right provider
   </ServiceBadge>
   <ServiceBadge>
-    Online Appointment Booking - Secure, HIPAA-compliant scheduling integrated directly into your website
+    Online Appointment Booking - Secure, HIPAA-compliant scheduling integrated
+    directly into your website
   </ServiceBadge>
   <ServiceBadge>
-    Resource Library - Educational content that positions you as a trusted mental health resource
+    Resource Library - Educational content that positions you as a trusted
+    mental health resource
   </ServiceBadge>
 </div>
 
